# Rian-Audio-Editor2

./: CRASH_FIXES_AND_AUDIO_IMPROVEMENTS.md  ELECTRON_SETUP.md  ELECTRON_STABLE_GUIDE.md  README.md  STARTUP_GUIDE.md  electron-main.cjs  electron-simple.cjs  package-lock.json  package.json  replit.md  start-services.sh  test-integration.js  vite.config.ts
attached_assets/: Pasted-Product-Requirements-Document-STS-Guided-Track-Workflow-Version-1-0-Date-16th-June-2025-Author-A-1752483872862_1752483872862.txt  V-441 Support for STS editor within project_1752483844318.docx  content-1752485167595.md
audio_processor/: Cargo.toml
audio_processor/src/: lib.rs  main.rs
audio_processor/src/audio_processor/: mod.rs
client/: index.html
client/public/: favicon.ico.bak
client/src/: App.tsx  index.css
client/src/components/sts/: audio-track.tsx  context-menu.tsx  edit-speaker-modal.tsx  enhanced-waveform.tsx  formatTime.ts  me-track.tsx  media-import-panel.tsx  menu-bar.tsx  project-selector.tsx  scrollable-timeline.tsx  simple-timeline.tsx  speaker-track.tsx  sts-modal.tsx  timeline-controls.tsx  timeline-ruler.tsx  track-section.tsx  useTimelineGrid.ts  (+3 more)
client/src/hooks/: useGlobalPlayhead.ts
client/src/lib/: audio-service.ts  debug-logger.ts  queryClient.ts
client/src/pages/: project-manager.tsx  sts-editor.fixed.tsx  sts-editor.tsx
migrations/: 0002_add_cache_key_to_audio_tracks.sql
scripts/: build-rust-binary.sh  fetch_voices.py
server/: audio-service.ts  elevenlabs.ts  index.ts  routes.ts  rust-audio-service.ts  storage.ts
shared/: schema.ts
(+5 files in other folders)
