[package]
name = "audio_processor"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.0"
actix-cors = "0.6.0"
actix-files = "0.6.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
symphonia = { version = "0.5", features = ["all"] }
thiserror = "1.0"
bincode = "1.3"
sha2 = "0.10"
hex = "0.4"
lazy_static = "1.4"
rand = "0.8"
log = "0.4"
env_logger = "0.10"
anyhow = "1.0"
uuid = { version = "1.0", features = ["v4"] }
futures = "0.3"

[dev-dependencies]
actix-rt = "2.0"
